crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__async_comprehension_in_sync_comprehension_error_on_310_3.10.snap
---
source: crates/ruff_linter/src/linter.rs
---
<filename>:1:27: SyntaxError: cannot use an asynchronous comprehension outside of an asynchronous function on Python 3.10 (syntax was added in 3.11)
  |
1 | async def f(): return [[x async for x in foo(n)] for n in range(3)]
  |                           ^^^^^^^^^^^^^^^^^^^^^
  |
