crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__await_outside_async_function.py.snap
---
source: crates/ruff_linter/src/linter.rs
---
PLE1142 `await` should be used within an async function
 --> resources/test/fixtures/syntax_errors/await_outside_async_function.py:2:5
  |
2 |     await 1
  |     ^^^^^^^
  |

PLE1142 `await` should be used within an async function
 --> resources/test/fixtures/syntax_errors/await_outside_async_function.py:5:1
  |
5 | await 1
  | ^^^^^^^
  |
