crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__await_scope_notebook.snap
---
source: crates/ruff_linter/src/linter.rs
---
F704 `await` statement outside of a function
 --> await_scope.ipynb:cell 3:2:5
  |
1 | class _:
2 |     await 1  # SyntaxError: await outside function
  |     ^^^^^^^
