crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__disabled_typing_extensions_does_not_add_typing_extensions.snap
---
source: crates/ruff_linter/src/linter.rs
---
<filename>:7:13: PYI019 Use `Self` instead of custom TypeVar `T`
  |
6 | class C:
7 |     def __new__(cls: type[T]) -> T:
  |                ^^^^^^^^^^^^^^^^^^^ PYI019
8 |               return cls
  |
  = help: Replace TypeVar `T` with `Self`
