crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__disabled_typing_extensions_pyi019_adds_typing_extensions.snap
---
source: crates/ruff_linter/src/linter.rs
---
PYI019 [*] Use `Self` instead of custom TypeVar `T`
 --> <filename>:7:13
  |
6 | class C:
7 |     def __new__(cls: type[T]) -> T:
  |                ^^^^^^^^^^^^^^^^^^^
8 |               return cls
  |
help: Replace TypeVar `T` with `Self`
  |
3 + from typing_extensions import Self
4 + 
5 | T = TypeVar("T", bound="_NiceReprEnum")
6 |
7 | class C:
8 ~     def __new__(cls) -> Self:
  |
