crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__global_parameter.py.snap
---
source: crates/ruff_linter/src/linter.rs
---
RUF103 name `a` is parameter and global
 --> resources/test/fixtures/syntax_errors/global_parameter.py:2:12
  |
1 | def f(a):
2 |     global a # error
  |            ^
3 |
4 | def g(a):
  |

RUF103 name `a` is parameter and global
 --> resources/test/fixtures/syntax_errors/global_parameter.py:6:16
  |
4 | def g(a):
5 |     if True:
6 |         global a # error
  |                ^
7 |
8 | def h(a):
  |

RUF103 name `a` is parameter and global
  --> resources/test/fixtures/syntax_errors/global_parameter.py:10:16
   |
 8 | def h(a):
 9 |     def inner():
10 |         global a # error
   |                ^
11 |
12 | def i(a):
   |

RUF103 name `a` is parameter and global
  --> resources/test/fixtures/syntax_errors/global_parameter.py:14:16
   |
12 | def i(a):
13 |     try:
14 |         global a # error
   |                ^
15 |     except Exception:
16 |         pass
   |
