crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__import_sorting.snap
---
source: crates/ruff_linter/src/linter.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> isort.ipynb:cell 1:1:1
  |
1 | / from pathlib import Path
2 | | import random
3 | | import math
  | |___________^
help: Organize imports
 ::: cell 1:0:1
  |
0 + import math
1 + import random
2 + from pathlib import Path
  |

I001 [*] Import block is un-sorted or un-formatted
 --> isort.ipynb:cell 2:1:1
  |
1 | / from typing import Any
2 | | import collections
  | |__________________^
3 |   # Newline should be added here
4 |   def foo():
  |
help: Organize imports
 ::: cell 2:0:1
  |
0 + import collections
1 + from typing import Any
  |

I001 [*] Import block is un-sorted or un-formatted
 --> isort.ipynb:cell 3:1:1
  |
1 | / from pathlib import Path
2 | | import sys
  | |__________^
3 |
4 |   %matplotlib \
  |
help: Organize imports
 ::: cell 3:0:1
  |
0 + import sys
1 + from pathlib import Path
  |

I001 [*] Import block is un-sorted or un-formatted
 --> isort.ipynb:cell 3:7:1
  |
5 |       --inline
6 |
7 | / import math
8 | | import abc
  | |__________^
help: Organize imports
 ::: cell 3:6:1
  |
6 + import abc
7 + import math
  |
